[package]
name = "waaa"
version = "0.1.1"
edition = "2021"
description = "WebAssembly, Abstracted Away"
repository = "https://github.com/Ekleog/waaa"
homepage = "https://github.com/Ekleog/waaa"
documentation = "https://docs.rs/waaa"
license = "MIT OR Apache-2.0"
keywords = ["async", "api", "web", "wasm", "webassembly"]
categories = [
    "api-bindings",
    "asynchronous",
    "development-tools::ffi",
    "wasm",
    "web-programming",
]

[features]
spawn = ["tokio/rt", "dep:wasm-bindgen-futures"]
time = ["dep:gloo-timers", "tokio/time", "dep:web-time"]
websocket = [
    "dep:anyhow",
    "futures-util/sink",
    "dep:gloo-net",
    "tokio/net",
    "dep:tokio-tungstenite",
]

[dependencies]
anyhow = { version = "1.0", optional = true, default-features = false, features = [
    "std",
] }
futures-util = { version = "0.3.30", default-features = false }
web-time = { version = "1.0", optional = true, default-features = false }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
tokio = { version = "1.36", optional = true, default-features = false, features = [
    "net",
    "rt",
    "time",
] }
tokio-tungstenite = { version = "0.21.0", optional = true, default-features = false, features = [
    "connect",
    "stream",
] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
gloo-net = { version = "0.5.0", optional = true, default-features = false, features = [
    "websocket",
] }
gloo-timers = { version = "0.3.0", optional = true, default-features = false, features = [
    "futures",
] }
wasm-bindgen-futures = { version = "0.4.41", optional = true, default-features = false }
